--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -10,6 +10,9 @@ scopes = {
 	"last_search.DD5CDD96" = "tag:Game"
 	"OpenInspectorPreview.DD5CDD96" = "0"
 	"currentGroup.DD5CDD96" = "all"
+	"last_search.B655092D" = "st:"
+	"OpenInspectorPreview.B655092D" = "0"
+	"currentGroup.B655092D" = "all"
 }
 providers = {
 	adb = {
@@ -50,6 +53,16 @@ providers = {
 	scene = {
 		active = true
 		priority = 50
+		defaultAction = null
+	}
+	at = {
+		active = true
+		priority = 100
+		defaultAction = null
+	}
+	st = {
+		active = true
+		priority = 100
 		defaultAction = null
 	}
 }
